--- a/index.html
+++ b/index.html
@@ -3,46 +3,124 @@
 <head>
 	<meta charset="UTF-8">
 	<title>IsDB BISEW IT Scholarship Project</title>
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="css/default.css">
+	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-	<div class="wrapper">
-		<div class="header-sec">
-			<div class="header-logo">
-				<p>LOGO</p>
-			</div>
-			<div class="menu-bar">
-				<ul>
-					<li><a href="">Home</a></li>
-					<li><a href="">about</a></li>
-					<li><a href="">Contact</a></li>
-					<li><a href="">Blog</a></li>
-					<li><a href="">Location</a></li>
-				</ul>
-			</div>
-			<div class="login-button">
-				<a href="">Login</a>
+	<div class="container">
+		<div class="row">
+			<div class="header-sec">
+				<div class="col-2">
+					<div class="header-logo">
+						<p class="middle">LOGO</p>
+					</div>
+				</div>
+				<div class="col-8">
+					<div class="menu-bar">
+						<ul>
+							<li><a class="active" href="">Home</a></li>
+							<li><a href="gallery.html">Gallery</a></li>
+							<li><a href="contact.html">Contact</a></li>
+							<li><a href="blog.html">Blog</a></li>
+							<li><a href="about.html">About</a></li>
+						</ul>
+					</div>
+				</div>
+				<div class="col-2">
+					<div class="login-button">
+						<a href="">Login</a>
+					</div>
+				</div>
 			</div>
 		</div>
 	</div>
-	<div class="wrapper">
-		<div class="side-link">
+	<div class="container">
+		<div class="row">
+			<div class="col-3">
+				<div class="side-link">
 			<h3>Our Recent Acctivity</h3>
 			<ul>
-				<li><a href="">New post1</a></li>
-				<li><a href="">New post1</a></li>
-				<li><a href="">New post1</a></li>
-				<li><a href="">New post1</a></li>
-				<li><a href="">New post1</a></li>
-				<li><a href="">New post1</a></li>
-				
-			</ul>
+						<li><a href="">Notice For Rent a Car</a></li>
+						<li><a href="">City View in Holeday In</a></li>
+						<li><a href="">Karona Vairas</a></li>
+						<li><a href="">Last Hours </a></li>
+						<li><a href="">Top HTML & CSS templete</a></li>
+						<li><a href="">Shop collection</a></li>
+						
+					</ul>
 		</div>
-		<div class="article-section">
+			</div>
+			<div class="col-9">
+				<div class="slider">
+					<div class="slider-img">
+						<img src="img/14.jpeg" alt="slider img">
+					</div>
+					<div class="slider-content">
+						<h1>This is slider heading</h1>
+						<p>This is slider content</p>
+						<button>SEE MORE</button>
+					</div>
+				</div>
+			</div>
+		</div>
+		
+		<!-- <div class="article-section">
 			<h1>Welcome to our IsDB BISEW IT Scholarship Project </h1>
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut sed, maxime aliquam, sunt voluptate dolor debitis distinctio ipsa, doloremque eos repellat nihil, quisquam adipisci dignissimos pariatur blanditiis nemo aliquid molestiae sequi. Incidunt delectus, fugiat odio ea totam obcaecati, laboriosam aliquid est omnis minima praesentium non assumenda distinctio similique sit corrupti quisquam consectetur rerum, commodi dolores cum laudantium. Numquam, vel ratione consequuntur dignissimos accusamus laudantium iure obcaecati nulla illo suscipit voluptate iusto voluptatibus optio id veniam excepturi doloribus non. Sapiente molestias, aliquid vero harum adipisci quibusdam natus molestiae voluptatibus repudiandae est enim, quis odio tenetur perferendis. Libero velit officiis natus, quia.</p>
 
-		</div>
+		</div> -->
+	</div>
+	<div class="container">
+		<div class="row">
+			<div class="footer-sec">
+				<div class="col-4">
+					<div class="f-about">
+						<h3>About Us</h3>
+						<table>
+							<tr>
+								<td>Address:</td>
+								<td> House # 31, Road # 23/A, Dhaka-1212</td>
+							</tr>
+							<tr>
+								<td>Email:</td>
+								<td>minarkhn1995@gmail.com</td>
+							</tr>
+							<tr>
+								<td>Phone:</td>
+								<td>  +8801856230550</td>
+							</tr>
+						</table>
+					</div>
+				</div>
+				<div class="col-4">
+					<div class="f-about">
+						<h3>Important link</h3>
+						<ul>
+							<li><a href="">Recent Post</a></li>
+							<li><a href="">Contact us</a></li>
+							<li><a href="">Media</a></li>
+							<li><a href="">Carrer</a></li>
+							<li><a href="">Galley</a></li>
+						</ul>
+					</div>
+				</div>
+				<div class="col-4">
+					<div class="f-about">
+						<h3>Our Location</h3>
+						<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14604.538265738905!2d90.3794937!3d23.778222!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xe72ef11d9cf0aeef!2sIslamic%20Development%20Bank-Bangladesh%20Islamic%20Solidarity%20and%20Educational%20Wakf%20(IsDB-BISEW)!5e0!3m2!1sen!2sbd!4v1581205276215!5m2!1sen!2sbd" frameborder:0; allowfullscreen=""></iframe>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-12">
+						<footer>
+							&copy;All Right Reserve by &reg;Minarkhan.com || Developed by <a href=""> Moaref Billah</a>
+						</footer>
+					</div>
+				</div>
+
+			</div>
+	</div>
+			
 	</div>
 </body>
 </html>
